--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,18 @@
 <body>
     <h1>Lasagna Recipe</h1>
     <img src="./images/lasagna.jpeg" alt="lasagna">
+    <h1>Baked to perfection</h1>
+    <p>Everyone loves a good lasagna, right? It's a 
+        great way to feed a crowd and a perfect dish 
+        to bring to a potluck. It freezes well. It reheats well. 
+        Leftovers will keep you happy for days.</p>
+        <p>
+            Simply Recipes reader Alton Hoover sent me his 
+            favorite recipe for lasagna which he has been 
+            cooking since his college days. Alton's original 
+            recipe created enough lasagna for a small army so 
+            I halved it. What is posted here will easily serve 
+            eight people.
+        </p>
 </body>
 </html>
