add ingredients to page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -21,5 +21,25 @@
             I halved it. What is posted here will easily serve 
             eight people.
         </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 ounces diced pancetta</li>
+            <li>chopped 1 medium Spanish onion or yellow onion</li> 
+            <li>1 rib celery, finely chopped</li>
+            <li>carrot, finely chopped</li>
+            <li>4 tablespoons unsalted butter</li>
+            <li>11 ounces ground beef</li>
+            <li>4 ounces ground pork</li>
+            <li>4 ounces ground Italian sausage</li>
+            <li>1 clove, freshly ground</li>
+            <li>Dash freshly ground cinnamon</li>
+            <li>1 teaspoon freshly ground black pepper</li>
+            <li>2 pounds tomatoes , peeled and chopped, or 1 (28-ounce) can whole peeled tomatoes</li>
+            <li>1 cup whole milk</li>
+            <li>1/2 teaspoon sea salt</li>
+            <li>2 cups whole milk</li>
+            <li>1/4 cup unsalted butter</li>
+            <li>1/4 cup all-purpose flour</li>
+        </ul>
 </body>
 </html>
