--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,45 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Lasagna Recipe</h1>
-    <img src="./images/lasagna.jpeg" alt="lasagna">
+    <img src="./images/lasagna.jpeg" alt="lasagna" />
     <h1>Baked to perfection</h1>
-    <p>Everyone loves a good lasagna, right? It's a 
-        great way to feed a crowd and a perfect dish 
-        to bring to a potluck. It freezes well. It reheats well. 
-        Leftovers will keep you happy for days.</p>
-        <p>
-            Simply Recipes reader Alton Hoover sent me his 
-            favorite recipe for lasagna which he has been 
-            cooking since his college days. Alton's original 
-            recipe created enough lasagna for a small army so 
-            I halved it. What is posted here will easily serve 
-            eight people.
-        </p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>2 ounces diced pancetta</li>
-            <li>chopped 1 medium Spanish onion or yellow onion</li> 
-            <li>1 rib celery, finely chopped</li>
-            <li>carrot, finely chopped</li>
-            <li>4 tablespoons unsalted butter</li>
-            <li>11 ounces ground beef</li>
-            <li>4 ounces ground pork</li>
-            <li>4 ounces ground Italian sausage</li>
-            <li>1 clove, freshly ground</li>
-            <li>Dash freshly ground cinnamon</li>
-            <li>1 teaspoon freshly ground black pepper</li>
-            <li>2 pounds tomatoes , peeled and chopped, or 1 (28-ounce) can whole peeled tomatoes</li>
-            <li>1 cup whole milk</li>
-            <li>1/2 teaspoon sea salt</li>
-            <li>2 cups whole milk</li>
-            <li>1/4 cup unsalted butter</li>
-            <li>1/4 cup all-purpose flour</li>
-        </ul>
-</body>
+    <p>
+      Everyone loves a good lasagna, right? It's a great way to feed a crowd and
+      a perfect dish to bring to a potluck. It freezes well. It reheats well.
+      Leftovers will keep you happy for days.
+    </p>
+    <p>
+      Simply Recipes reader Alton Hoover sent me his favorite recipe for lasagna
+      which he has been cooking since his college days. Alton's original recipe
+      created enough lasagna for a small army so I halved it. What is posted
+      here will easily serve eight people.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>2 ounces diced pancetta</li>
+      <li>chopped 1 medium Spanish onion or yellow onion</li>
+      <li>1 rib celery, finely chopped</li>
+      <li>carrot, finely chopped</li>
+      <li>4 tablespoons unsalted butter</li>
+      <li>11 ounces ground beef</li>
+      <li>4 ounces ground pork</li>
+      <li>4 ounces ground Italian sausage</li>
+      <li>1 clove, freshly ground</li>
+      <li>Dash freshly ground cinnamon</li>
+      <li>1 teaspoon freshly ground black pepper</li>
+      <li>
+        2 pounds tomatoes , peeled and chopped, or 1 (28-ounce) can whole peeled
+        tomatoes
+      </li>
+      <li>1 cup whole milk</li>
+      <li>1/2 teaspoon sea salt</li>
+      <li>2 cups whole milk</li>
+      <li>1/4 cup unsalted butter</li>
+      <li>1/4 cup all-purpose flour</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Prepare the Bolognese Meat Sauce</li>
+        <li>Make the soffritto:</li>
+        <li>Combine pancetta, onion, celery, and carrot in sauté pan with butter and cook over medium heat until onion turns pale gold.</li>
+        <li>Add other ingredients:
+Add the beef, pork, and sausage to the soffritto and increase the heat to high. Cook until browned. Sprinkle with the ground clove, cinnamon, and pepper.</li>
+<li>Add the tomatoes:
+Stir in the tomatoes and bring to a simmer. Reduce the heat to medium. Cook over medium heat for 15 minutes. If you are using whole canned tomatoes, break them up as you add them to the sauce.</li>
+<li>Add milk and simmer:
+Add the milk, season with sea salt, then turn down the heat and let simmer for 2 and 1/2 hours. Stir at least every 20 minutes. Whenever the sauce simmers down to the point that it is sticking to the bottom of the pan, just add 1/4 cup of water and scrape up the browned bits from the bottom and continue to cook.</li>
+<li>Make the Béchamel Sauce
+Make the roux:
+Heat the milk until almost boiling in a heavy bottomed sauce pan.</li>
+<li>In a separate pan melt the unsalted butter with the flour over low heat. Stir rapidly with a spoon. Cook this for 1 minute and then remove from the heat. (See Wikipedia on Béchamel Sauce for more information on this sauce.)</li>
+<li>Add half the milk to the roux:
+Slowly add half the hot milk to your butter and flour mixture. During this process stir constantly.</li>
+<li>Add remaining milk and thicken the sauce:
+Return the milk, butter, flour mixture to low heat until the sauce begins to thicken. Add the remaining milk slowly while stirring working it into the thickened sauce. Continue to stir until it comes to a boil.</li>
+<li>Season, then stir:
+Season with some sea salt, and continue stirring until the right consistency has developed. If any lumps form, beat them out rapidly with a whisk until they dissolve. Remove from heat.</li>
+<li>Prepare the Lasagna
+Cook the lasagna noodles:
+Preheat oven to 375°F. Cook the lasagna according to instructions. About 8 minutes in 6 quarts of boiling salted water. Drain, rinse with cold water.</li>
+<li>Lay the individual lasagna noodles out on kitchen towels, not touching, so they do not stick together while you layer the casserole.</li>
+<li>
+    Layer the lasagna:
+    Spread a little olive oil around the inside of a 13x9-inch baking pan. Make sure your baking pan is non-reactive - pyrex or stainless steel. Do not use an aluminum pan as it will react with the acidity of the sauce and ruin the flavor.
+    
+</li>
+
+
+<li>Put a layer of lasagna noodles down first. Layer on a third of the bolognese sauce, then a third of the bechamel sauce.
+
+Sprinkle with grated Parmesan. Repeat two more times. Top with a final layer of noodles and sprinkle with grated Parmesan.</li>
+<li>
+    Bake:
+    Tent the casserole with aluminum foil. Put lasagna into the middle rack of a pre-heated 375°F oven. Bake for 20-30 minutes, until the top begins to get lightly browned.
+    
+    Remove from oven and let cool 5-10 minutes before serving.
+</li>
+
+
+
+    </ol>
+  </body>
 </html>
