--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna Recipe</a>
-    <a href="./recipes/chicken.html">Chicken recipe</a>
+    <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+    <li><a href="./recipes/chicken.html">Chicken recipe</a></li>
+    
+    
 </body>
 </html>
