--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -6,6 +6,9 @@
     <title>Noodles To Go</title>
 </head>
 <body>
-    
+    <h1>Easy Egg Noodles</h1>
+    <img src="./images/noodles.jpg" alt="noodles">
+    <h2>Easy Peasy Noodles</h2>
+    <p>This egg noodle recipe is basic and old-fashioned, just like grammy used to make! Try them next time you prepare your favorite soup or stew. Don't forget that fresh pasta cooks much quicker than dried! You may use a dough hook attachment on your electric mixer or your hands to knead the pasta dough.</p>
 </body>
 </html>
