--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -10,5 +10,13 @@
     <img src="./images/noodles.jpg" alt="noodles">
     <h2>Easy Peasy Noodles</h2>
     <p>This egg noodle recipe is basic and old-fashioned, just like grammy used to make! Try them next time you prepare your favorite soup or stew. Don't forget that fresh pasta cooks much quicker than dried! You may use a dough hook attachment on your electric mixer or your hands to knead the pasta dough.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 ½ cups all-purpose flour</li>
+        <li>1 pinch salt</li>
+        <li>2 eggs, beaten</li>
+        <li>½ cup milk</li>
+        <li>1 tablespoon butter</li>
+    </ul>
 </body>
 </html>
