add steps for cooking

--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -18,5 +18,18 @@
         <li>½ cup milk</li>
         <li>1 tablespoon butter</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+<li>Stir flour and salt together in a large bowl. Add eggs, milk, and butter.</li>
+
+<li>Knead dough until smooth, about 5 minutes. Let rest in a covered bowl for 10 minutes.</li>
+
+<li>On a floured surface, roll dough out to a thickness of 1/8 to 1/4 inch. Cut into desired lengths and shapes.</li>
+
+<li>Allow to air-dry before cooking, 10 to 15 minutes.</li>
+
+<li>Cook noodles in a large pot of salted boiling water until al dente, about 5 minutes.
+</li>
+    </ol>
 </body>
 </html>
