add chicken image

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Chicken Recipe</h1>
-    <img src="./images/lasagna.jpeg" alt="lasagna" />
+    <img src="./images/chicken.jpg" alt="chicken" />
     <h1>Poultry Portion</h1>
     <p>
         “Super chickens naturally have more fat, so they will roast differently to other birds. To make this dish with a standard chicken, see our recipe at jamiemagazine.com. ”
