add ingredients chicken

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -13,43 +13,24 @@
         “Super chickens naturally have more fat, so they will roast differently to other birds. To make this dish with a standard chicken, see our recipe at jamiemagazine.com. ”
     </p>
     <h2>Ingredients</h2>
-        2 kg Maris Piper potatoes
-    2 lemons
-    1 x 3-3.5 kg whole free-range super chicken
-    olive oil
-    5 cloves of garlic
-    ½ a bunch of fresh thyme (15g)
-    ½ a bunch of fresh chervil (15g)
-    ½ a bunch of fresh basil (15g)
-    ½ a bunch of fresh flat-leaf parsley (15g)
-    4 tablespoons fat-free Greek yoghurt
-    extra virgin olive oil
-    1 bulb of fennel
-    ¼ of a white cabbage
-    4 medium carrots
-    <h2>Ingredients</h2>
     <ul>
-      <li>2 ounces diced pancetta</li>
-      <li>chopped 1 medium Spanish onion or yellow onion</li>
-      <li>1 rib celery, finely chopped</li>
-      <li>carrot, finely chopped</li>
-      <li>4 tablespoons unsalted butter</li>
-      <li>11 ounces ground beef</li>
-      <li>4 ounces ground pork</li>
-      <li>4 ounces ground Italian sausage</li>
-      <li>1 clove, freshly ground</li>
-      <li>Dash freshly ground cinnamon</li>
-      <li>1 teaspoon freshly ground black pepper</li>
-      <li>
-        2 pounds tomatoes , peeled and chopped, or 1 (28-ounce) can whole peeled
-        tomatoes
-      </li>
-      <li>1 cup whole milk</li>
-      <li>1/2 teaspoon sea salt</li>
-      <li>2 cups whole milk</li>
-      <li>1/4 cup unsalted butter</li>
-      <li>1/4 cup all-purpose flour</li>
+      <li>2 kg Maris Piper potatoes</li>
+      <li>2 lemons</li>
+      <li>1 x 3-3.5 kg whole free-range super chicken</li>
+    <li>olive oil</li>
+    <li>5 cloves of garlic</li>
+    <li>½ a bunch of fresh thyme (15g)</li>
+    <li>½ a bunch of fresh chervil (15g)</li>
+    <li>½ a bunch of fresh basil (15g)</li>
+    <li>½ a bunch of fresh flat-leaf parsley (15g)</li>
+    <li>4 tablespoons fat-free Greek yoghurt</li>
+    <li>extra virgin olive oil</li>
+    <li>bulb of fennel</li>
+    <li>¼ of a white cabbage</li>
+    <li>4 medium carrots</li>
     </ul>
+      
+    
     <h2>Steps</h2>
     <ol>
         <li>Prepare the Bolognese Meat Sauce</li>
