add home page links

--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -31,5 +31,6 @@
 <li>Cook noodles in a large pot of salted boiling water until al dente, about 5 minutes.
 </li>
     </ol>
+    <a href="../index.html">Return to main Page</a>
 </body>
 </html>
