--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -88,5 +88,6 @@ Sprinkle with grated Parmesan. Repeat two more times. Top with a final layer of 
 
 
     </ol>
+    <a href="../index.html">Return to main Page</a>
   </body>
 </html>
