--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./recipes/images/chef.jpg" alt="chef-img">
     <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
     <li><a href="./recipes/chicken.html">Chicken recipe</a></li>
     <li><a href="./recipes/noodles.html">Noodles Recipe</a></li>
