--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
     <li><a href="./recipes/chicken.html">Chicken recipe</a></li>
     <li><a href="./recipes/noodles.html">Noodles Recipe</a></li>
+    <a href="https://www.google.com/">Search</a>
     
     
 </body>
