--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Nick's trial at cooking</h1>
     <img src="./recipes/images/chef.jpg" alt="chef-img" width="900px">
     <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
     <li><a href="./recipes/chicken.html">Chicken recipe</a></li>
     <li><a href="./recipes/noodles.html">Noodles Recipe</a></li>
-    
+
     
 </body>
 </html>
